<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/fmaterial_material_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/story_material_rg"/>

    <RadioGroup
        android:id="@+id/story_material_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">


        <RadioButton
            android:id="@+id/rb_material_layout"
            style="@style/story_material_rb"
            android:text="@string/layout"/>


        <RadioButton
            android:id="@+id/rb_material_scene"
            style="@style/story_material_rb"
            android:text="@string/scene"/>

        <RadioButton
            android:id="@+id/rb_material_role"
            style="@style/story_material_rb"
            android:text="@string/role"/>

        <RadioButton
            android:id="@+id/rb_material_specialEffects"
            style="@style/story_material_rb"
            android:text="@string/effects"/>

        <RadioButton
            android:id="@+id/rb_material_text"
            style="@style/story_material_rb"
            android:text="@string/text"/>

    </RadioGroup>


</RelativeLayout>

