<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp">


            <TextView
                android:id="@+id/flow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_flow"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/flow"
                android:text="@string/low_flow_text"
                android:textColor="@color/gray"/>

            <Switch
                android:id="@+id/flow_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp">


            <TextView
                android:id="@+id/reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply_push"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reply"
                android:text="@string/reply_push_text"
                android:textColor="@color/gray"/>

            <Switch
                android:id="@+id/reply_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp">


            <TextView
                android:id="@+id/update_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_hint"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/update_hint"
                android:text="@string/update_hint_text"
                android:textColor="@color/gray"/>

            <Switch
                android:id="@+id/update_hint_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp">


            <TextView
                android:id="@+id/night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_pattern"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/night"
                android:text="@string/night_pattern_text"
                android:textColor="@color/gray"/>

            <Switch
                android:id="@+id/night_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/phone_set"
                style="@style/my_account_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_set"/>


            <TextView
                android:id="@+id/my_help_jump"
                style="@style/my_account_menu_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/more"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/my_help_jump"
                android:text="188****8888"/>
        </RelativeLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                style="@style/my_account_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/award"/>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/opinion"
                style="@style/my_account_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpAndFeedback"/>


            <TextView
                style="@style/my_account_menu_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/recommend"
                style="@style/my_account_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommend_to_friend"/>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">


            <TextView
                style="@style/my_account_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clearCache"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical|end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="30M"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                style="@style/my_account_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"/>


            <TextView
                style="@style/my_account_menu_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/about_my"
                style="@style/my_account_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp"/>

            <TextView
                style="@style/my_account_menu_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/user_deal"
                style="@style/my_account_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_deal"/>

            <TextView
                style="@style/my_account_menu_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"/>
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/my_exitRegister"
                style="@style/my_account_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/exitRegister"/>
        </FrameLayout>


        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15pt"
            android:text="可通过上下文菜单修改背景色"/>

        <TextView
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>


    </LinearLayout>
</ScrollView>