<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/store_return"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:src="@drawable/ic_return"/>


        <RadioGroup
            android:id="@+id/rg_store_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_store_writing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/writing"
                android:textColor="@color/white"
                />

            <RadioButton
                android:id="@+id/rb_store_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:button="@null"
                android:text="@string/cartoon"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/rb_store_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/material"
                android:textColor="@color/white"/>

        </RadioGroup>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fStore_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />

</LinearLayout>
